--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@ body, html {height: 100%}
   </div>
   
 </div>
-
+<a href="https://icons8.com/icon/u_cdPXa4gUD0/hybrid">Hybrid icon by Icons8</a>
 </body>
 </html>
