--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ body, html {height: 100%}
   </div>
   <div 
   <div class="w3-display-bottomleft w3-padding-large">
-	Powered by <a href="https://github.com/Fire7ly" target="_blank">Fire7ly Git.</a><br><br>
     <a href="https://icons8.com/icon/u_cdPXa4gUD0/hybrid">Hybrid icon by Icons8</a>
+  </div>
+<div class="w3-display-bottommiddle w3-padding-large">
+    Powered by <a href="https://github.com/Fire7ly" target="_blank">Fire7ly Git.</a>
   </div>
    <div 
   <div class="w3-display-bottomright w3-padding-large">
