trying to fix heading in middle

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
    <a href="#"><img id="logo" src="https://img.icons8.com/color/50/000000/year-of-tiger.png"></a>
   </div>
-  <div class="w3-display-middle">
+  <div class="w3-display-middle" style="margin:auto;width:50%">
     <h1 class="w3-jumbo w3-animate-top">Welcome To FireFly House..</h1>
-    <hr class="w3-border-gray" style="margin:auto;width:30%">
+    <hr class="w3-border-gray" style="margin:auto;width:40%">
     <p class="w3-large w3-center">My Projects</p>
 	<p class="w3-large w3-center"><a href="https://github.com/Fire7ly/URF" target="_blank"><b>1. URF</b></a></p>
   </div>
