--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
    <a href="#"><img id="logo" src="https://img.icons8.com/color/50/000000/year-of-tiger.png"></a>
   </div>
-  <div class="w3-display-middle" style="margin:auto;width:50%">
+  <div class="w3-display-middle" style="margin:2%;width:60%;">
     <h1 class="w3-jumbo w3-animate-top">Welcome To FireFly House..</h1>
     <hr class="w3-border-gray" style="margin:auto;width:40%">
     <p class="w3-large w3-center">My Projects</p>
-	<p class="w3-large w3-center"><a href="https://github.com/Fire7ly/URF" target="_blank"><b>1. URF</b></a></p>
+	<p class="w3-large w3-center"><a href="https://github.com/Fire7ly/URF" target="_blank"><b>1. URF (Ultimate Recovery Flasher)</b></a></p>
+  <p class="w3-large w3-center"><a href="https://github.com/Fire7ly/FUM" target="_blank"><b>2. FUM (Fastboot Unbrick Maker Advance)</b></a></p>
   </div>
   <div 
   <div class="w3-display-bottomleft w3-padding-large">
@@ -39,6 +40,7 @@ body, html {height: 100%}
   <div class="w3-display-bottomright w3-padding-large">
   <li><a href="https://t.me/fire7ly"><img src="assets/tg.png"></a></li>
   <li><a href="https://github.com/Fire7ly"><img src="assets/git.png"></a></li>
+  <li><a href="https://forum.xda-developers.com/m/fire7ly.11560765/"><img src="assets/xda.png"></a></li>
   </div>
 </div>
 </body>
